# visualizer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
tests/: test_chart_utils.py  test_csv_parser.py  test_json_parser.py
visualizer/: app.py  csv_tab.py  json_tab.py
visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
visualizer/pages/: 1_JSON_Analysis.py  2_JSON_Comparison.py  3_CSV_Analysis.py  4_CSV_Comparison.py
visualizer/utils/: chart_utils.py  csv_parser.py  data_utils.py  graph_utils.py  json_parser.py
