[project]
name = "visualizer"
version = "0.1.0"
description = "A simple data visualization app for JSON and CSV files."
dependencies = [
    "streamlit>=1.18.0",
    "pandas>=1.4.0",
    "plotly>=5.0.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["visualizer*"]
